--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -1,6 +1,7 @@
 $font-color: black;
 $font-color2: white;
 $font-color3: #439dd7;
+$font-color3-1: #6cb1df;
 $font-color4: #003d72;
 $font-color5: #1c3249;
 $font-color5-1: #1c32496b;
@@ -21,9 +22,13 @@ $carousel-btn-bgc: #003d72;
 $search-result-hover-color: #003d72aa;
 $cannabis-bgc: #003d7255;
 $border-color3: #439dd7;
+$login-bgc: white;
+$submit-btn-bgc: #439dd7;
+$submit-btn-bgc2: #003d72;
 $aboutUs-bgc: #439dd7;
 $search-result-bgc: #439dd7;
 $icon-bgc: #439dd7dd;
+$form-bgc: #439dd798;
 $about-section-bgc: #439dd778;
 $carousel-item-bgc: #439dd778;
 $footer-bgc: #439dd788;
