--- a/css/about_project.css
+++ b/css/about_project.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Anton&family=Archivo:wght@300;400;700;900&family=Passion+One:wght@400;700;900&display=swap");
 main .header {
-  padding: 200px 50px 30px;
+  height: 87vh;
+  padding: 150px 50px 30px;
   background-image: url(../img/security_section_bg.png);
   background-repeat: no-repeat;
   background-position: left;
@@ -108,6 +109,7 @@ main .interview {
   position: relative;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  height: 87vh;
   padding: 30px;
   font-family: "Archivo", sans-serif;
   background-image: url(../img/interview_bg.jpg);
@@ -120,7 +122,7 @@ main .interview h2 {
 }
 main .interview p {
   width: 60%;
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   margin: 40px 0;
 }
 main .interview .btn {
