Adiciona a página de signup, signin e esqueci minha senha.

--- a/scss/login.scss
+++ b/scss/login.scss
@@ -4,6 +4,10 @@
 
 body {
   background-color: c.$login-bgc;
+  // i.fa-solid {
+  //   color: red;
+  //   font-size: 3rem;
+  // }
 }
 header {
   display: block;
