--- a/scss/header.scss
+++ b/scss/header.scss
@@ -2,6 +2,7 @@
 @use "fonts" as f;
 @use "menu";
 @use "search_result";
+@use "./responsive/responsive_header.scss";
 
 header {
   position: fixed;
@@ -11,7 +12,7 @@ header {
   justify-content: space-between;
   padding: 15px 10px;
   height: 13vh;
-  width: 100%;
+  width: 100vw;
   background-color: c.$header-bgc;
   font-family: f.$archivo;
   a {
@@ -34,9 +35,10 @@ header {
   }
   .logo {
     width: 15%;
-  }
-  .logo img {
-    width: 100%;
+    margin: auto 0;
+    img {
+      width: 100%;
+    }
   }
   nav {
     display: flex;
@@ -74,4 +76,8 @@ header {
       width: 100%;
     }
   }
+}
+
+.responsive-extra {
+  display: none;
 }
