--- a/scss/security.scss
+++ b/scss/security.scss
@@ -2,6 +2,7 @@
 @use "fonts" as f;
 
 .security {
+  $arf: 16px;
   .header {
     display: grid;
     grid-template-columns: 8fr 4fr;
@@ -15,10 +16,10 @@
     color: c.$font-color2;
     h2 {
       width: 80%;
-      font-size: 3rem;
+      font-size: 3 * $arf;
     }
     p {
-      font-size: 2rem;
+      font-size: 2 * $arf;
       font-weight: lighter;
       text-align: right;
     }
@@ -31,7 +32,7 @@
         padding: 10px 30px;
         border: 2px solid c.$border-color2;
         border-radius: 30px;
-        font-size: 1.5rem;
+        font-size: 1.5 * $arf;
         font-family: f.$archivo;
         color: c.$font-color2;
         &:hover {
@@ -47,7 +48,7 @@
     font-family: f.$archivo;
     color: c.$font-color4;
     h2 {
-      font-size: 2.5rem;
+      font-size: 2.5 * $arf;
       font-weight: bold;
     }
     div {
@@ -62,3 +63,5 @@
     }
   }
 }
+
+@import "./responsive/responsive_security.scss";
