--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -2,6 +2,7 @@
 @use "fonts" as f;
 
 footer {
+  $arf: 16px;
   background-color: c.$footer-bgc;
   padding: 20px 0;
   font-family: f.$archivo;
@@ -11,27 +12,19 @@ footer {
     grid-auto-rows: auto;
     width: 50%;
     margin: 0 auto;
+    .title {
+      font-size: 1.3 * $arf;
+      color: c.$font-color4;
+    }
+    .topic {
+      font-size: 1.1 * $arf;
+      color: c.$font-color;
+    }
   }
   .about_us {
     display: flex;
     flex-direction: column;
     gap: 15px;
-    p:nth-of-type(1) a {
-      font-size: 1.3rem;
-      color: c.$font-color4;
-    }
-    p:nth-of-type(2) a {
-      font-size: 1.1rem;
-      color: c.$font-color;
-    }
-    p:nth-of-type(3) a {
-      font-size: 1.1rem;
-      color: c.$font-color;
-    }
-    p:nth-of-type(4) a {
-      font-size: 1.1rem;
-      color: c.$font-color;
-    }
     a {
       position: relative;
       &::after {
@@ -53,18 +46,6 @@ footer {
     display: flex;
     flex-direction: column;
     gap: 15px;
-    p:nth-of-type(1) {
-      font-size: 1.3rem;
-      color: c.$font-color4;
-    }
-    p:nth-of-type(2) {
-      font-size: 1.1rem;
-      color: c.$font-color;
-    }
-    p:nth-of-type(3) {
-      font-size: 1.1rem;
-      color: c.$font-color;
-    }
   }
   .social_media {
     grid-column-start: 1;
@@ -76,3 +57,5 @@ footer {
     }
   }
 }
+
+@import "./responsive/responsive_footer.scss";
