--- a/scss/information.scss
+++ b/scss/information.scss
@@ -1,3 +1,4 @@
+$arf: 16px;
 @use "colors" as c;
 @use "fonts" as f;
 
@@ -8,7 +9,7 @@
     text-align: center;
     font-family: f.$archivo;
     font-weight: lighter;
-    font-size: 1.3rem;
+    font-size: 1.3 * $arf;
   }
   section {
     display: grid;
@@ -26,8 +27,10 @@
     p {
       margin-top: 30px;
       font-family: f.$anton;
-      font-size: 1.9rem;
+      font-size: 1.9 * $arf;
       color: c.$information-font-color;
     }
   }
 }
+
+@import "./responsive/responsive_information.scss";
