--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,7 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Anton&family=Archivo:wght@300;400;700&display=swap");
+#initial {
+  background-color: #439dd7;
+}
 #initial img {
-  margin: 0 37.5vw;
-  width: 25vw;
+  margin: 0 35vw;
+  width: 30vw;
 }
 
 #sobre {
@@ -9,21 +12,23 @@
 }
 #sobre h2 {
   font-family: "Archivo", sans-serif;
+  font-size: 250%;
   color: #003d72;
   margin-bottom: 3%;
 }
 #sobre .text-sobre {
   display: flex;
   justify-content: space-between;
+  width: 60vw;
 }
 #sobre .text-sobre p:nth-child(1) {
   width: 27ch;
-  font-size: 95%;
+  font-size: 145%;
   font-family: "Archivo", sans-serif;
 }
 #sobre .text-sobre p:nth-child(2) {
   width: 27ch;
-  font-size: 95%;
+  font-size: 130%;
   font-family: "Archivo", sans-serif;
 }
 
