--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -9,6 +9,6 @@ $border-color: black;
 $border-color2: white;
 $menu-bar-color: black;
 $menu-bgc: white;
-$icon-bgc: #439dd7dd;
-$aboutUs-bgc: #439DD7;
+$icon-bgc: #439dd7;
 $information-font-color: #003d72;
+$about-us-bgc: #439dd7;
