--- a/scss/header.scss
+++ b/scss/header.scss
@@ -10,7 +10,7 @@ header {
   top: 0;
   display: flex;
   justify-content: space-between;
-  padding: 15px 10px;
+  padding: 15px 20px 15px 10px;
   height: 13vh;
   width: 100vw;
   background-color: c.$header-bgc;
