--- a/scss/about_project.scss
+++ b/scss/about_project.scss
@@ -1,6 +1,7 @@
 @use "colors" as c;
 @use "fonts" as f;
 @use "mixins" as m;
+$arf: 16px;
 
 main {
   .header {
@@ -14,7 +15,7 @@ main {
     color: c.$about-project-header-font-color;
     h1 {
       width: 85%;
-      font-size: 4.5rem;
+      font-size: 4.5 * $arf;
     }
     div {
       display: grid;
@@ -27,7 +28,7 @@ main {
       width: auto;
       text-align: center;
       text-decoration: underline;
-      font-size: 1.5rem;
+      font-size: 1.5 * $arf;
       color: c.$about-project-header-font-color;
       &:hover {
         text-decoration: underline;
@@ -41,11 +42,16 @@ main {
     padding: 50px;
     font-family: f.$archivo;
     div {
-      * {
-        width: 50%;
+      h2 {
+        width: 80%;
+        font-size: 2 * $arf;
       }
-      p:nth-of-type(1) {
-        margin: 40px 0 30px;
+      p {
+        width: 50%;
+        font-size: 1.4 * $arf;
+        &:nth-of-type(1) {
+          margin: 40px 0 30px;
+        }
       }
     }
   }
@@ -67,12 +73,12 @@ main {
     section {
       h2 {
         margin: 50px 0;
-        font-size: 3rem;
+        font-size: 3 * $arf;
         color: c.$font-color4;
       }
       p {
         width: 70%;
-        font-size: 1.3rem;
+        font-size: 1.3 * $arf;
       }
     }
   }
@@ -82,12 +88,13 @@ main {
     font-family: f.$archivo;
     text-align: center;
     h2 {
-      font-size: 3rem;
+      font-size: 3 * $arf;
       font-weight: bold;
     }
     .description {
       width: 60%;
       margin: 40px auto;
+      font-size: 1.3 * $arf;
     }
     .aspects {
       @include m.elements_grid(3);
@@ -111,6 +118,7 @@ main {
       }
       p {
         margin-top: 30px;
+        font-size: 1.3 * $arf;
       }
     }
   }
@@ -125,12 +133,12 @@ main {
     background-repeat: no-repeat;
     background-size: cover;
     h2 {
-      font-size: 3rem;
+      font-size: 3 * $arf;
       color: c.$font-color4;
     }
     p {
       width: 60%;
-      font-size: 1.1rem;
+      font-size: 1.4 * $arf;
       margin: 40px 0;
     }
     .btn {
@@ -144,6 +152,7 @@ main {
       color: c.$font-color4;
       border: 2px solid c.$font-color4;
       border-radius: 40px;
+      font-size: 1.3 * $arf;
       &:hover {
         background-color: map-get(c.$inverted_colors, secondary);
         color: map-get(c.$inverted_colors, primary);
@@ -159,20 +168,20 @@ main {
     h2 {
       margin-bottom: 80px;
       color: c.$font-color4;
-      font-size: 3rem;
+      font-size: 3 * $arf;
     }
     div {
       @include m.elements_grid(2);
     }
     p {
       width: 60%;
-      font-size: 1.3rem;
+      font-size: 1.3 * $arf;
     }
   }
 
   .cannabis {
     position: relative;
-    z-index: -2;
+    z-index: 2;
     @include m.elements_grid(2);
     align-items: center;
     height: 87vh;
@@ -191,12 +200,29 @@ main {
       background-color: c.$cannabis-bgc;
     }
     h2 {
-      font-size: 3rem;
+      font-size: 3 * $arf;
       font-weight: 300;
       letter-spacing: 10px;
     }
     p {
-      font-size: 1.3rem;
+      font-size: 1.3 * $arf;
+    }
+    a {
+      position: absolute;
+      z-index: 3;
+      bottom: 30px;
+      left: 50%;
+      padding: 20px 40px;
+      background-color: c.$card-person-bgc;
+      color: c.$font-color4;
+      border: 2px solid c.$font-color4;
+      border-radius: 40px;
+      font-size: 1.3 * $arf;
+      &:hover {
+        background-color: map-get(c.$inverted_colors, secondary);
+        color: map-get(c.$inverted_colors, primary);
+        border: 2px solid map-get(c.$inverted_colors, primary);
+      }
     }
   }
 }
@@ -216,7 +242,7 @@ main {
     padding: 10px 30px;
     border: 2px solid c.$border-color3;
     border-radius: 30px;
-    font-size: 1.5rem;
+    font-size: 1.5 * $arf;
     font-family: f.$archivo;
     color: c.$font-color3;
     &:hover {
