--- a/scss/security.scss
+++ b/scss/security.scss
@@ -59,6 +59,7 @@
         width: 80%;
         padding: 10px;
         border: 4px solid c.$security-p-border-color;
+        font-size: 1.4 * $arf;
       }
     }
   }
