fix (medic.html, header): Arruma um pequeno bug do header na hora que você procurava um remédio na página do remédio específico.

--- a/scss/header.scss
+++ b/scss/header.scss
@@ -2,7 +2,6 @@
 @use "fonts" as f;
 @use "menu";
 @use "search_result";
-@use "./responsive/responsive_header.scss";
 
 header {
   position: fixed;
@@ -81,3 +80,5 @@ header {
 .responsive-extra {
   display: none;
 }
+
+@import "./responsive/responsive_header.scss";
