--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -3,6 +3,7 @@ $font-color2: white;
 $font-color3: #439dd7;
 $font-color3-1: #6cb1df;
 $font-color4: #003d72;
+$font-color4-1: rgb(5, 80, 145);
 $font-color5: #1c3249;
 $font-color5-1: #1c32496b;
 $border-color: black;
@@ -33,6 +34,7 @@ $about-section-bgc: #439dd778;
 $carousel-item-bgc: #439dd778;
 $footer-bgc: #439dd788;
 $hot-drugs-header-bgc: #1c3249;
+$drug-hr: #898989;
 
 $inverted_colors: (
   primary: #ffffff,
