feat (index.html, sobre.html): Adiciona responsividade à página index.html e começa a responsividade no sobre.html.

--- a/scss/responsive/index/responsive_footer.scss
+++ b/scss/responsive/index/responsive_footer.scss
@@ -1,5 +1,5 @@
-@use "../colors" as c;
-@use "../fonts" as f;
+@use "../../colors" as c;
+@use "../../fonts" as f;
 
 @media (max-width: 870px) {
   footer {
@@ -12,14 +12,14 @@
       display: grid;
       grid-template-columns: 1fr 1fr;
       grid-auto-rows: auto;
-      width: 50%;
+      width: 90%;
       margin: 0 auto;
       .title {
-        font-size: 1.3 * $arf;
+        font-size: 2.4 * $arf;
         color: c.$font-color4;
       }
       .topic {
-        font-size: 1.1 * $arf;
+        font-size: 2 * $arf;
         color: c.$font-color;
       }
     }
@@ -60,7 +60,7 @@
       p {
         grid-column-start: 1;
         grid-column-end: 4;
-        font-size: 1.5 * $arf;
+        font-size: 2 * $arf;
       }
     }
   }
