--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@
     text-align: center;
     font-family: "Archivo", sans-serif;
     font-weight: lighter;
-    font-size: 10.4px;
+    font-size: 19.2px;
   }
   .information section {
     display: flex;
@@ -57,7 +57,7 @@
   .information section p {
     margin-top: 30px;
     font-family: "Anton", sans-serif;
-    font-size: 15.2px;
+    font-size: 18.4px;
     color: #003d72;
   }
 }
@@ -122,11 +122,11 @@
 
 @media (max-width: 870px) {
   .security .header {
-    display: grid;
-    grid-template-columns: 8fr 4fr;
+    display: flex;
+    flex-direction: column;
     width: 100%;
     padding: 50px;
-    background-image: url(../img/security_section_bg.png);
+    background-image: url(../../../img/security_section_bg.png);
     background-repeat: no-repeat;
     background-position: left;
     background-size: cover;
@@ -140,21 +140,22 @@
   .security .header p {
     font-size: 16px;
     font-weight: lighter;
-    text-align: right;
-  }
-  .security .header div p {
-    margin-top: 150px;
     text-align: left;
   }
-  .security .header div a {
+  .security .header p:nth-of-type(1) {
+    margin-top: 50px;
+    margin-bottom: 20px;
+    text-align: left;
+  }
+  .security .header a {
     padding: 10px 30px;
     border: 2px solid white;
     border-radius: 30px;
-    font-size: 12px;
+    font-size: 16px;
     font-family: "Archivo", sans-serif;
     color: white;
   }
-  .security .header div a:hover {
+  .security .header a:hover {
     background-color: white;
     color: #439dd7;
     border: 2px solid transparent;
@@ -237,7 +238,7 @@ main .inicial a:hover {
     width: 18%;
   }
   main .inicial p:nth-of-type(1) {
-    width: 60%;
+    width: 80%;
     margin: 0 auto 30px;
     font-size: 28px;
     font-family: "Anton", sans-serif;
