--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Anton&family=Archivo:wght@300;400;700;900&family=Passion+One:wght@400;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Archivo:wght@300;400;700;900&family=Passion+One:wght@400;700;900&display=swap");
 #initial {
   background-color: #439dd7;
   text-align: center;
@@ -122,6 +123,133 @@
   font-style: italic;
   text-align: right;
   text-decoration: underline;
+}
+
+@media (max-width: 870px) {
+  #initial {
+    background-color: #439dd7;
+    text-align: center;
+  }
+  #initial img {
+    width: 70vw;
+  }
+  .standard_style {
+    padding: 3% 5%;
+  }
+  .standard_style h2 {
+    font-family: "Archivo", sans-serif;
+    font-weight: 700;
+    color: #003d72;
+    margin-bottom: 3%;
+  }
+  .standard_style .text-sobre {
+    display: flex;
+    flex-direction: column;
+  }
+  .standard_style .text-sobre p {
+    width: 27ch;
+    margin-top: 30px;
+    font-size: 20px;
+    font-family: "Archivo", sans-serif;
+  }
+  .standard_style .icons {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 40px;
+    margin-top: 30px;
+    text-align: center;
+  }
+  .standard_style .icons figure {
+    width: 70%;
+    height: 200px;
+    margin: 0 auto 20px;
+    padding: 20px;
+    background-color: bisque;
+    border-radius: 50%;
+  }
+  .standard_style .icons img {
+    height: 90%;
+  }
+  .standard_style .icons p {
+    font-family: "Archivo", sans-serif;
+    font-weight: bold;
+  }
+  .team {
+    display: flex;
+    flex-direction: column;
+    padding: 40px 0 40px 40px;
+    background-color: rgba(67, 157, 215, 0.4705882353);
+  }
+  .team .information h2 {
+    font-size: 48px;
+    font-family: "Archivo", sans-serif;
+    font-weight: bold;
+    color: #003d72;
+  }
+  .team .information p {
+    width: 90%;
+    margin-top: 50px;
+    margin-bottom: 30px;
+    font-size: 21.6px;
+    font-family: "Archivo", sans-serif;
+  }
+  .team .slider {
+    display: flex;
+    margin-left: -25px;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scrollbar-width: none;
+    scroll-behavior: smooth;
+    font-family: "Archivo", sans-serif;
+  }
+  .team .slider::-webkit-scrollbar {
+    width: 0;
+    background: transparent;
+  }
+  .team .slider .person {
+    flex: 0 0 auto;
+    scroll-snap-align: start;
+    width: 350px;
+    height: 100%;
+    margin: 0 15px;
+    padding: 20px;
+    background-color: rgba(255, 255, 255, 0.4666666667);
+    text-align: center;
+  }
+  .team .slider .person img {
+    width: 50%;
+    border-radius: 50%;
+  }
+  .team .slider .person .role {
+    margin: 10px 0;
+    font-weight: bold;
+  }
+  .quote {
+    padding: 40px 20px;
+    background-color: rgba(67, 157, 215, 0.4705882353);
+    font-family: "Archivo", sans-serif;
+    color: #003d72;
+  }
+  .quote p:nth-of-type(1) {
+    font-weight: 300;
+    font-size: 15.2px;
+  }
+  .quote p:nth-of-type(1)::before {
+    content: '"';
+    font-family: "Passion One", sans-serif;
+    font-size: 24px;
+  }
+  .quote p:nth-of-type(1)::after {
+    content: '"';
+    font-family: "Passion One", sans-serif;
+    font-size: 24px;
+  }
+  .quote p:nth-of-type(2) {
+    font-size: 16px;
+    font-style: italic;
+    text-align: right;
+    text-decoration: underline;
+  }
 }
 
 /*# sourceMappingURL=sobre.css.map */
