--- a/scss/responsive/index/responsive_header.scss
+++ b/scss/responsive/index/responsive_header.scss
@@ -1,5 +1,5 @@
-@use "../colors" as c;
-@use "../fonts" as f;
+@use "../../colors" as c;
+@use "../../fonts" as f;
 
 @media (max-width: 870px) {
   .search {
