--- a/scss/responsive/index/responsive_main.scss
+++ b/scss/responsive/index/responsive_main.scss
@@ -1,5 +1,5 @@
-@use "../colors" as c;
-@use "../fonts" as f;
+@use "../../colors" as c;
+@use "../../fonts" as f;
 
 @media (max-width: 870px) {
   $arf: 8px;
@@ -14,7 +14,7 @@
         width: 18%;
       }
       p:nth-of-type(1) {
-        width: 60%;
+        width: 80%;
         margin: 0 auto 30px;
         font-size: 3.5 * $arf;
         font-family: f.$anton;
