--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -12,6 +12,7 @@ $header-bgc: white;
 $menu-bgc: white;
 $border-color2: white;
 $about-project-header-font-color: white;
+$icon-bgc3: #80c5f3;
 $icon-bgc2: #f4f4ec;
 $carousel_drugs: #f4f4ec;
 $card-person-bgc: #ffffff77;
