--- a/scss/security.scss
+++ b/scss/security.scss
@@ -53,10 +53,13 @@
     }
     div {
       margin-top: 50px;
-      width: 40%;
+      width: 90%;
       padding: 10px;
       border: 4px solid c.$security-p-border-color;
       font-size: 1.4 * $arf;
+      p {
+        margin-bottom: 20px;
+      }
     }
   }
 }
