--- a/scss/responsive/index/responsive_footer.scss
+++ b/scss/responsive/index/responsive_footer.scss
@@ -54,8 +54,8 @@
       grid-template-columns: 1fr 1fr 1fr;
       text-align: center;
       img {
-        width: 35px;
-        margin: 10px 7.5px;
+        width: 45px;
+        margin: 10px auto;
       }
       p {
         grid-column-start: 1;
