--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -96,4 +96,53 @@
       }
     }
   }
+
+  @media (max-width: 870px) {
+    position: relative;
+    padding: 40px 40px 0;
+    .material-symbols-rounded {
+      position: absolute;
+      z-index: 99;
+      padding: 5px;
+      font-size: 1.8rem;
+      color: c.$font-color2;
+      background-color: c.$carousel-btn-bgc;
+      border-radius: 50%;
+      translate: 0 -50%;
+      cursor: pointer;
+      &:nth-of-type(1) {
+        top: 50%;
+        left: -10px;
+      }
+      &:nth-of-type(2) {
+        top: 50%;
+        right: -10px;
+      }
+    }
+    .carousel {
+      display: flex;
+      gap: 5%;
+      width: 100%;
+      overflow: hidden;
+      scroll-behavior: smooth;
+      span {
+        flex: 0 0 auto;
+        background-color: c.$carousel-item-bgc;
+        width: 47.5%;
+        height: 200px;
+        padding: 0px;
+        figure {
+          padding-top: 10px;
+        }
+        img {
+          width: 90%;
+          height: 80%;
+          margin-bottom: 10px;
+        }
+        p {
+          color: c.$font-color;
+        }
+      }
+    }
+  }
 }
