--- a/scss/about_project.scss
+++ b/scss/about_project.scss
@@ -44,7 +44,7 @@ main {
     div {
       h2 {
         width: 80%;
-        font-size: 2 * $arf;
+        font-size: 3 * $arf;
       }
       p {
         width: 50%;
@@ -52,6 +52,12 @@ main {
         &:nth-of-type(1) {
           margin: 40px 0 30px;
         }
+      }
+    }
+    .standard_artic {
+      width: 80%;
+      img {
+        width: 100%;
       }
     }
   }
@@ -233,6 +239,7 @@ main {
   border-radius: 40px;
   text-align: center;
   img {
+    border: 1px solid c.$article-border;
     border-radius: 0 60px 0 0;
   }
   figcaption {
