quero que o nosso site se exploda

--- a/scss/about_project.scss
+++ b/scss/about_project.scss
@@ -185,6 +185,13 @@ main {
     }
   }
 
+  .infographic {
+    text-align: center;
+    img {
+      width: 70%;
+    }
+  }
+
   .cannabis {
     position: relative;
     z-index: 2;
