--- a/css/about_project.css
+++ b/css/about_project.css
@@ -174,6 +174,12 @@ main .curiosity p {
   width: 60%;
   font-size: 20.8px;
 }
+main .infographic {
+  text-align: center;
+}
+main .infographic img {
+  width: 70%;
+}
 main .cannabis {
   position: relative;
   z-index: 2;
