--- a/css/registrar.css
+++ b/css/registrar.css
@@ -52,6 +52,7 @@ table
     margin: 30px;
     padding: 0px;
     width: 50%;
+    border-collapse: collapse; 
 }
 
 #tableHead
@@ -62,7 +63,7 @@ table
 
 td
 {
-    border: 1px solid black;
+    border: 1px solid rgb(133, 133, 133);
     margin: 0px;
     padding: 5px;
 }
@@ -73,7 +74,11 @@ tr
     margin: 0px;
 }
 
-td button
+.update-button
 {
     cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    padding: 5px;
+    background-color: rgb(240, 240, 44);
 }
