--- a/css/registrar.css
+++ b/css/registrar.css
@@ -51,7 +51,6 @@ table
 {
     margin: 30px;
     padding: 0px;
-    width: 50%;
     border-collapse: collapse; 
 }
 
@@ -79,6 +78,14 @@ tr
     margin: 0px;
 }
 
+tr:nth-child(odd) {
+    background-color: #ffffff; /* Cor de fundo mais clara para linhas ímpares */
+}
+
+tr:nth-child(even) {
+    background-color: #e6e6e6; /* Cor de fundo mais escura para linhas pares */
+}
+
 .update-button
 {
     cursor: pointer;
@@ -95,4 +102,15 @@ tr
     border-radius: 5px;
     padding: 5px;
     background-color: rgb(233, 75, 75);
+}
+
+#article-tableLoadMedic
+{
+    width: 50%;
+    height: 500px;
+    overflow-y: scroll;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 30px;
 }
